# the_first

./: Cargo.toml
assets/css/: login.css
src/: main.rs
templates/: enroll.handlebars  login.handlebars
views/: enroll.css  index.css  index.html  login.html
views/enroll/: enroll.html
views/index/: index.css  index.html
views/login/: login.html
