[package]
name = "the_first"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
handlebars = { version = "6.3.2", features = ["dir_source", "rust-embed"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
lazy_static = "1.5.0"
rust-embed = "8.7.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net"] }
